--- a/bootstrapStuff/Bootstrap4/conFusion/index.html
+++ b/bootstrapStuff/Bootstrap4/conFusion/index.html
@@ -44,8 +44,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p class="d-none d-sm-block">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-4 align-self-center">
                     <img src="img/logo.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-2 align-self-center">
+                    <a href="#reserveTable" class="btn btn-lg btn-warning" role="button"> Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -77,8 +80,19 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">
+                            Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+
+                    <img src="img/uthappizza.png" alt="uthappizza" class="d-flex ml-3 img-thumbnail align-self-left">
+                </div>
+
             </div>
         </div>
 
@@ -95,6 +109,64 @@
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row row-content align-items-center">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="card" id="reserveTable">
+                    <h3 class="card-header bg-warning text-white">
+                        Reserver a Table
+                    </h3>
+                    <div class="card-body">
+                        <form action="">
+                            <div class="form-group row">
+                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-10">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="1" id="1" value="1">
+                                        <label class="form-check-label" for="1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="2" id="2" value="2">
+                                        <label class="form-check-label" for="2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="3" id="3" value="3">
+                                        <label class="form-check-label" for="3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="4" id="4" value="4">
+                                        <label class="form-check-label" for="4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="5" id="5" value="5">
+                                        <label class="form-check-label" for="5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="6" id="6" value="6">
+                                        <label class="form-check-label" for="6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="guests" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-md-3">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-md-3">
+                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary"> Reserve </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2">
             </div>
         </div>
     </div>
