--- a/bootstrapStuff/Bootstrap4/conFusion/index.html
+++ b/bootstrapStuff/Bootstrap4/conFusion/index.html
@@ -85,6 +85,83 @@
             </div>
         </div>
     </div>
+    <div id="reservation" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="form-group row">
+                            <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-md-10">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guests" id="1" value="1">
+                                    <label class="form-check-label" for="1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guests" id="2" value="2" checked>
+                                    <label class="form-check-label" for="2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guests" id="3" value="3">
+                                    <label class="form-check-label" for="3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guests" id="4" value="4">
+                                    <label class="form-check-label" for="4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guests" id="5" value="5">
+                                    <label class="form-check-label" for="5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="guests" id="6" value="6">
+                                    <label class="form-check-label" for="6">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-md-2 col-form-label">Section</label>
+                            <div class="col-md-10">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-success form-check-label active">
+                                      <input class="form-check-input" type="radio" name="options" id="nonSmoking" autocomplete="off" checked>
+                                      Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger form-check-label">
+                                      <input class="form-check-input" type="radio" name="options" id="Smoking" autocomplete="off">
+                                      Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="dateAndTime" class="col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-md-3">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-md-3">
+                                <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-2">
+                                <button type="submit" class="btn btn-danger" data-dismiss="modal"> Cancel </button>
+                            </div>
+                            <div class="col-md-2">
+                                <button type="submit" class="btn btn-primary"> Reserve </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron">
         <div class="container">
@@ -97,7 +174,7 @@
                     <img src="img/logo.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-2 align-self-center">
-                    <a href="#reserveTable" class="btn btn-block btn-lg btn-warning" data-toggle="tooltip" data-html="true" title="Or call us at <br/> <strong> +852 12345678 </strong>"  data-placement = "bottom"> Reserve Table</a>
+                    <a data-toggle="modal" data-target="#reservation" class="btn btn-block btn-lg btn-warning"> Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -157,6 +234,9 @@
                         </a>
                     </div>
                 </div>
+                <button class="btn btn-danger btn-sm" id="carouselButton">
+                    <span class="fa fa-pause"></span>
+                </button>
             </div>
         </div>
         <div class="row row-content align-items-center">
@@ -215,64 +295,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center">
-            <div class="col-sm-8 offset-sm-2">
-                <div class="card" id="reserveTable">
-                    <h3 class="card-header bg-warning text-white">
-                        Reserver a Table
-                    </h3>
-                    <div class="card-body">
-                        <form action="">
-                            <div class="form-group row">
-                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
-                                <div class="col-md-10">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="1" id="1" value="1">
-                                        <label class="form-check-label" for="1">1</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="2" id="2" value="2">
-                                        <label class="form-check-label" for="2">2</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="3" id="3" value="3">
-                                        <label class="form-check-label" for="3">3</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="4" id="4" value="4">
-                                        <label class="form-check-label" for="4">4</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="5" id="5" value="5">
-                                        <label class="form-check-label" for="5">5</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="6" id="6" value="6">
-                                        <label class="form-check-label" for="6">6</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="guests" class="col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-md-3">
-                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-md-3">
-                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-2 col-md-10">
-                                    <button type="submit" class="btn btn-primary"> Reserve </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-2">
-            </div>
-        </div>
     </div>
 
     <footer class="footer">
@@ -322,8 +344,20 @@
     <script src="../../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        })
+            $('#mycarousel').carousel( {interval : 1000} )
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                }
+                else if ($("#carouselButton").children("span").hasClass('fa-play')){
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');
+                }
+            });
+        });
     </script>
 </body>
 
