--- a/bootstrapStuff/Bootstrap4/conFusion/index.html
+++ b/bootstrapStuff/Bootstrap4/conFusion/index.html
@@ -9,11 +9,13 @@
      <meta http-equiv="x-ua-compatible" content="ie=edge">
 
      <!-- Bootstrap CSS -->
+     <!-- build:css css/main.css -->
      <link rel="stylesheet" href="../../../node_modules/bootstrap/dist/css/bootstrap.min.css">
      <link rel="stylesheet" href="../../../node_modules/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="../../../node_modules/bootstrap-social/bootstrap-social.css">
 
      <link rel="stylesheet" href="css/styles.css">
+     <!-- endbuild -->
 
 </head>
 
@@ -335,34 +337,12 @@
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="../../../node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="../../../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="../../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('#mycarousel').carousel( {interval : 1000} )
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');
-                }
-            });
-            $('#loginLink').click(function(){
-                $('#loginModal').modal('toggle');
-                $('#loginModal').modal('show');
-            });
-            $('#reserveLink').click(function(){
-                $('#reservation').modal('toggle');
-                $('#reservation').modal('show');
-            });
-        });
-    </script>
+    <script src="js/sctipts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
