--- a/bootstrapStuff/Bootstrap4/conFusion/index.html
+++ b/bootstrapStuff/Bootstrap4/conFusion/index.html
@@ -343,6 +343,9 @@
     <script src="../../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/sctipts.js"></script>
     <!-- endbuild -->
+    <script id="__bs_script__">//<![CDATA[
+        document.write("<script async src='http://HOST:3002/browser-sync/browser-sync-client.js?v=2.26.10'><\/script>".replace("HOST", location.hostname));
+    //]]></script>
 </body>
 
 </html>
